<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of Umbra.
  
      Umbra is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      Umbra is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with Umbra.  If not, see <http://www.gnu.org/licenses/>.
  
      Copyright (c) 2011 vasile.
      All rights reserved. This program and the accompanying materials
      are made available under the terms of the GNU Public License v3.0
      which accompanies this distribution, and is available at
      
     http://www.gnu.org/licenses/gpl-3.0.html
  
      Contributors:
         Vasile Jureschi <vasile.jureschi@gmail.com> - initial API and implementation
-->
<resources>

    <string name="where_am_i">Where Am I ?</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="app_name">Umbra</string>
    <string name="running">is running, tap to display.</string>
    <string name="gps_dialog">This application needs a GPS fix to run properly.</string>
    <string name="start_gps_btn">Start GPS</string>
    <string name="continue_no_gps">Continue</string>
    <string name="connectivity_warning">Maps cannot be downloaded as network connection is unavailable. Enable the 3G or WiFi connection."</string>
    <string name="help_text">Umbra is a exploration application based on the the Fog Of War concept used in strategy games.
	 
	On the map the unexplored area is displayed grayed out while the explored part is clear. The application needs a GPS fix in order
	to mark an area as explored as the accuracy from the other location sources is not good enough. Currently the minimum accuracy needed
	for saving the explored area is set at 20 m (60 feet). The accuracy is displayed as a disc around the current position.
	Umbra saves your exploration in an internal database (nothing is sent over the network).</string>
    <string name="feedback_text">Send feedback or suggestion email</string>
    <string name="feedback_email">vasile.jureschi@gmail.com</string>
    <string name="email_subject">Umbra feedback</string>
    <string name="email_body">Complain here :)</string>
    <string name="email_chooser">Send email using:</string>
    <string name="transparency_label">Set the fog transparency</string>
    <string name="measurement_metric">Imperial system selected, uncheck to use the metric system</string>
    <string name="measurement_imperial">Metric system selected, check to use the imperial system</string>
    <string name="animate_move">Map movement is manual, check to center map on location changes</string>
    <string name="animate_none">Map movement is automatic on location changes, uncheck to move map manually</string>
    <string name="updates_car">Walk mode selected, check for car mode</string>
    <string name="updates_walk">Car mode selected, uncheck for walk mode</string>
    <string name="remote_service_started">Location service started</string>
    <string name="remote_service_connected">Connected to location service</string>
    <string name="remote_service_disconnected">Disconnected from location service</string>
    <string name="load">Load</string>
    <string name="import_locations">Import locations</string>
    <string name="import_gpx">Import</string>
    <string name="export_gpx">Export data</string>
    <string name="select_gpx_folder">Select GPX Folder</string>
    <string name="importing_locations">Importing locations, please wait…</string>
    <string name="measurement_system">Measurement system</string>
    <string name="map_movement">Map movement</string>
    <string name="location_updates_frequency">Location updates frequency</string>
    <string name="exporting_locations">Exporting locations, please wait....</string>
    <string name="share_data">Share Umbra data</string>
    <string name="ok">Ok</string>
    <string name="share_file">Share file</string>
    <string name="no">No</string>

</resources>